Summary Page changes. And some PMD related changes in forms.
SVN-Revision: 17666